[tool.poetry]
name = "downshift"
version = "0.1.0"
license = "GPL-3.0-only"
description = "Downshift is a tool to plan long trips using the cheapest public transportation available"
authors = ["Michael House <mjhouse@protonmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
# this command will fetch all remote data 
# and update the database. It's very slow.
fetch = "downshift.console:fetch"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pycryptodome = "^3.18.0"
beautifulsoup4 = "^4.12.2"
peewee = "^3.16.2"
ratelimit = "^2.2.1"
jsonschema = "^4.18.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
